First commit on IntelliJ